# amberdata

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  codecov.yml  coverage.sh  docker-compose.test.yml  docker-compose.yml  pyproject.toml  setup.py  taskfile.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml
.github/workflows/: book.yml  ci.yml  pre-commit.yml  pypi.yml  release.yml
actions/publish/: action.yml
book/: _config.yml  genindex.html  objects.inv  search.html  searchindex.js
book/_sources/docs/: index.md
book/docs/: api.html  index.html  index.md  reports.html
book/sphinx/: conf.py
build-Linux-/: show.txt
config/: settings.cfg  settingsXXX.cfg
pdoc/: index.html  pyamber.html  search.js
pdoc/pyamber/: enum.html  features.html  flask_amberdata.html  intervals.html  markets.html  request.html  util.html
pyamber/: __init__.py  enum.py  exts.py  features.py  flask_amberdata.py  intervals.py  markets.py  request.py  util.py
scripts/: features.py  health.py  server.py
sphinx/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/.doctrees/: environment.pickle  index.doctree  license.doctree
sphinx/.doctrees/autoapi/: index.doctree
sphinx/.doctrees/autoapi/pyamber/: index.doctree
sphinx/_modules/: index.html  pyamber.html
sphinx/_modules/pyamber/: enum.html  features.html  flask_amberdata.html  intervals.html  markets.html  request.html  util.html
sphinx/_sources/: license.rst.txt
sphinx/_sources/autoapi/: index.rst.txt
sphinx/_sources/autoapi/pyamber/: index.rst.txt
sphinx/autoapi/: index.html
sphinx/autoapi/pyamber/: index.html
sphinx/autoapi/pyamber/enum/: index.html
sphinx/autoapi/pyamber/features/: index.html
sphinx/autoapi/pyamber/flask_amberdata/: index.html
test/: create_responses.py  settings.py  test_amberdata.py  test_app.py  test_features.py  test_intervals.py
test/config/: settings.cfg
test/resources/: bidask_latest.csv  exchanges.json  ohlcv_history.csv  ohlcv_latest.csv  ohlcv_latest.json  ohlcv_pairs.json  pairs.json  price_pairs.json  prices_history.csv  prices_history.json  ticker_pairs.json
tests/: conftest.py  create_responses.py  requirements.txt  set.py  settings.py  test_amberdata.py  test_app.py  test_features.py  test_intervals.py
tests/coverage/: coverage.info  coverage.json  coverage.xml
tests/html-coverage/: class_index.html  function_index.html  index.html  status.json  z_c504e218ecf5f56d___init___py.html  z_c504e218ecf5f56d_enum_py.html  z_c504e218ecf5f56d_features_py.html  z_c504e218ecf5f56d_flask_amberdata_py.html  z_c504e218ecf5f56d_intervals_py.html  z_c504e218ecf5f56d_markets_py.html  z_c504e218ecf5f56d_request_py.html  z_c504e218ecf5f56d_util_py.html
tests/html-report/: report.html
tests/resources/: bidask_history.csv  bidask_history.json  bidask_latest.csv  bidask_latest.json  ohlcv_history.csv  ohlcv_history1.json  ohlcv_history2.json  ohlcv_history3.json  ohlcv_latest.json  ohlcv_pairs.json  pairs.json  price_pairs.json  prices_history.csv  prices_history.json  prices_latest.csv  prices_latest.json  ticker_pairs.json  trades.json
tests_3.11/html-report/: report.html
tests_coverage/html-report/: report.html
(+18 files in other folders)
