[tool.poetry]
name = "pyamber"
version = "0.0.0"
description = "Interact with Amber"
authors = ["Thomas Schmelzer"]
readme = "README.md"
repository = "https://github.com/tschm/amberdata"
packages = [{include = "pyamber"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
requests = "*"
pandas = "*"
flask = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
httpretty = "*"
requests-mock = "*"

[build-system]
requires = ["poetry>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I"]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]
